# jembe-auth-demo

./: .flaskenv  .gitignore  README.md  TODO  package.json  postcss.config.js  pyproject.toml  tailwind.config.js
instance/: config.py
jembe_auth_demo/: __init__.py  commands.py  db.py  jmb.py
jembe_auth_demo/common/: forms.orm.py  forms.py
jembe_auth_demo/db/: __init__.py  exc_filters.py  exceptions.py
jembe_auth_demo/models/: auth.py
jembe_auth_demo/pages/: dashboard.py  main.py
jembe_auth_demo/pages/auth/: __init__.py  auth.py  groups.py  users.py
jembe_auth_demo/pages/common/: __init__.py  confirmation.py  create.py  delete.py  form.py  link.py  main_menu.py  menu.py  notifications.py  page.py  page_title.py  permanent_component.py  progress_indicator.py  read.py  table.py  update.py
jembe_auth_demo/src/css/: main.css
jembe_auth_demo/static/css/: main.css
jembe_auth_demo/templates/: main.html
jembe_auth_demo/templates/auth/: login.html  reset.html
jembe_auth_demo/templates/common/: confirmation.html  create.html  crud_table.html  delete.html  form.html  main_menu.html  notifications.html  page.html  page_base.html  progress_indicator.html  read.html  system_error_notification.html  table.html  update.html
jembe_auth_demo/templates/main/: _logout.html  groups.html  reset_password.html  user_profile.html  user_profile_edit.html
jembe_auth_demo/templates/main/groups/: create.html  (+1 more)
migrations/versions/: 39bcbf0bee9a_create_user_and_groups.py  68e2974459fe_.py  a0e05486087f_add_group_table.py  ac2e18d338eb_insert_demo_groups.py  cb9b828fd687_.py
